spark-connect/deployment/sparglim-server/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sparglim
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparglim-server
  namespace: sparglim
  labels:
    app: sparglim-server
spec:
  replicas: 1

  selector:
    matchLabels:
      app: sparglim-server
  template:
    metadata:
      labels:
        app: sparglim-server
    spec:
      serviceAccountName: spark
      containers:
        - name: sparglim-server
          image: tiendat2807/sparglim-server
          ports:
            - containerPort: 15002
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "2000m"
