spark-connect/deployment/sparglim-server/connect-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparglim-server-service
  namespace: sparglim
  labels:
    app: sparglim-server
spec:
  type: ClusterIP #NodePort
  ports:
    - name: connect-server
      protocol: TCP
      port: 15002
      #nodePort: 30052
      targetPort: 15002
    - name: spark-ui
      protocol: TCP
      port: 4040
      #nodePort: 30040
      targetPort: 4040
  selector:
    app: sparglim-server
