spark-connect/deployment/sparglim-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sparglim-server-ingress
  namespace: sparglim
spec:
  ingressClassName: nginx
  rules:
  - host: spark.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sparglim-server-service
            port:
              number: 4040
